# xiao-workbench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main.toml
src-tauri/permissions/autogenerated/: acknowledge_xiao_attention_item.toml  add_git_worktree.toml  agent_request.toml  apply_git_patch.toml  automate_task_preview.toml  bind_xiao_task_codex_profile.toml  cancel_xiao_run.toml  capture_task_preview.toml  check_codex_update.toml  compare_git_branch.toml  create_git_checkpoint.toml  create_git_draft_pull_request.toml  create_xiao_routine.toml  delete_xiao_codex_profile.toml  delete_xiao_project_group.toml  delete_xiao_routine.toml  discard_git_checkpoint.toml  discover_xiao_acceptance_presets.toml  enqueue_xiao_run.toml  export_xiao_handoff.toml  finish_git_checkpoint.toml  get_browser_console.toml  get_browser_url.toml  get_git_branches.toml  get_git_pull_request.toml  get_git_pull_request_checks.toml  get_git_worktrees.toml  get_workspace_snapshot.toml  get_xiao_execution_context.toml  go_back_browser.toml  go_forward_browser.toml  import_xiao_handoff.toml  list_agent_models.toml  list_workspace_files.toml  list_xiao_attention_items.toml  list_xiao_codex_profiles.toml  list_xiao_managed_worktrees.toml  list_xiao_pending_inputs.toml  list_xiao_project_groups.toml  list_xiao_projects.toml  (+47 more)
src-tauri/src/: lib.rs  main.rs  process.rs
src-tauri/src/agent/: commands.rs  mod.rs  models.rs  protocol.rs  runtime.rs  service.rs  supervisor.rs
src-tauri/src/browser/: commands.rs  mod.rs  preview.rs
src-tauri/src/execution/: commands.rs  models.rs  service.rs
src-tauri/src/git/: commands.rs  models.rs  service.rs
src-tauri/src/handoff/: commands.rs  models.rs  repository.rs  service.rs
src-tauri/src/lsp/: mod.rs  protocol.rs  service.rs
src-tauri/src/routines/: commands.rs  mod.rs  models.rs  repository.rs  schedule.rs  service.rs
src-tauri/src/runs/: commands.rs  mod.rs  models.rs  prompt.rs  repository.rs  service.rs
src-tauri/src/system/: commands.rs  models.rs  service.rs
src-tauri/src/terminal/: commands.rs  runtime.rs
src-tauri/src/time_travel/: commands.rs  models.rs  repository.rs
src-tauri/src/verification/: artifacts.rs  commands.rs  (+8 more)
src-tauri/tests/: process_supervisor.rs
(+231 files in other folders)
