[package]
name = "xiao-workbench"
version = "0.1.0-beta.1"
description = "A focused desktop workbench for coding agents"
authors = ["Xiao"]
edition = "2021"

[lib]
name = "xiao_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
portable-pty = "0.9"
tauri = { version = "2.8", features = ["protocol-asset", "unstable"] }
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1", features = ["sync", "time"] }
ureq = "3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.3"
