[package]
name = "xiao-workbench"
version = "0.0.0-day07212026"
description = "A focused desktop workbench for coding agents"
authors = ["Xiao"]
license = "MIT"
edition = "2021"

[lib]
name = "xiao_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
chrono = "0.4"
chrono-tz = "0.10"
portable-pty = "0.9"
percent-encoding = "2"
regex = "1"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
sha2 = "0.11.0"
tauri = { version = "2.8", features = ["protocol-asset", "tray-icon", "unstable"] }
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
ureq = "3"
uuid = { version = "1", features = ["v7"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"
notify-rust = { version = "4.18", default-features = false }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.3"
